# tom

./: .gitattributes  .gitignore  .project  AUTHORS  ChangeLog  GIT_DEV  INSTALL  INSTALL_DEV  LICENCE  MTbuild.xml  Makefile.am  NEWS  README  README.in  README.md  RELEASE  acinclude.m4  build.bat  build.sh  build.xml  buildMT.sh  changeCopyright.sh  compile.sh  configure.in  gen_sloccount.sh  isUsedTomGomMessage.sh  local.properties  local.properties_template  reconf  runTestNP.sh  test windows carriager return.txt  test.file  testNP.sh  testSynch.txt  thisIsATest.txt  transfo_TODO
config/: Makefile.am  README  jtom-config.sh.src  program-check.m4
doc/: FAQ.md  Licensing_conditions.md  Makefile.am  README  README.md  debug.tex  depgraphjtom.pgn  install.html  install.tex  introduction.tex  language.html  language.tex  lib.html  library.tex  manual.html  manual.hva  manual.ps  manual.sh  manual.tex  manual1.html  manual1001.html  system.html  system.tex  tutorial.html  tutorial.tex
doc/reference/: EMF.md  Gom.md  Migration_Guide.md  README.md  Runtime_Library.md  Strategies.md  Tom.md
doc/tools/: Compiling_trunk.md  Configuring_your_environment.md  EMF_Mapping_Generator.md  Installation.md  README.md  Tom_Server.md  Using_Gom.md  Using_Tom.md
doc/tour/: Basic_Usage.md  Data_Structure_Invariants.md  README.md  Seeing_Java_Objects_as_Terms.md  Term-Graph_Rewriting.md  Using_subtypes.md
doc/tutorial/: Advanced_features.md  Language_Basics_Level_1.md  Language_Basics_Level_2.md  Language_Basics_–_Level_3.md  Playing_with_EMF.md  README.md  Writing_a_compiler.md
examples/lsystems/: Lsystems1.t  Lsystems2.t  Lsystems3.t  Lsystems4.t  Lsystems5.t  Lsystems6.t  Lsystems7.t  Makefile.am  RunExamples.java
src/: .cvsignore  CODING_STYLE  DEVELOPPER_GUIDE  Makefile.am  NOTES  TODO  make_rules
src/adt/: Makefile.am  TNode.adt  TomSignature.adt
src/config/: Gom.config  Gom.xml  GomAntlrAdaptor.config  GomAntlrAdaptor.xml  Tom-printv3ast.xml  Tom.config  Tom.xml
src/jjtraveler/: All.java  Choice.java  Fail.java  Identity.java  IfThenElse.java  MuVar.java  Not.java  One.java  Pselect.java  Sequence.java  Some.java  Visitable.java  VoidVisitor.java
src/lib/: tom-common.xml
src/tom/: backquote.build.xml  fusion.build.xml  minijavabuild.xml  newtom.build.xml  proto.build.xml  tom.build.xml  tombuild.xml
stable/: .cvsignore  Makefile.am  make_rules
stable/adt/: Makefile.am  TNode.tom  TomSignature.tom  set.tom
stable/config/: Gom.xml  GomAntlrAdaptor.xml  Tom.config  Tom.xml
stable/jjtraveler/: All.java  BottomUp.java  Fail.java  Identity.java  IfThenElse.java  MuVar.java  Not.java  Some.java  TravelerFactory.java  VisitFailure.java  Visitor.java
stable/lib/: Vas.xml  tom-common.xml
test/: Array.t  GenericTest.java  Jstring.t  List.t  Makefile.am  Peano.t  README  Record.t  Test.t  TestAlgebraic.t  TestArray.t  TestArray2.t  TestArrayNonLinear.t  TestBackQuote.t  TestBuiltin.t  TestBuiltinNS.t  TestConstraintCombination.t  TestConstraintCombinationWithSubtype.t  TestDom.t  TestDoubleSubject.t  TestLabel.t  TestLabelNS.t  TestList.t  TestList2.T  TestList2.t  TestList2NS.t  TestListNS.t  TestListNonLinear.t  TestListNonLinearNS.t  TestMatch.t  TestMatchInference.t  TestNonVarSubjects.t  TestOptimizer.t  TestPPTextPosition.t  TestPeano.t  TestRecord.t  TestReflectiveStrategy.t  TestSet.java  TestStrategy.t  TestSublists.t  (+15 more)
test/acmatching/: TestAC.t  TestBool3.t
test/andor/: TestAnd.t  TestAndOr.t  TestAndOrConstraintOnly.t  TestAndOrConstraintOnlyNS.t  TestDottedNotation.t
test/antipatterns/: Test1.t  TestAntiPattern.t  TestAntiPattern2.t  TestAntiPattern3.t  TestAntiPatternAssociative.t  TestDoubleList.t  TestDoubleListNS.t
test/backquote/: TestBackquoteGom.t  TestBackquoteWithBracket.t  TestDefaultValue.t  term.gom
test/error/: ArrayT1.t  ArrayT2.t  ArrayT3.t  ArrayT4.t  ArrayT5.t  ArrayT6.t  ArrayT7.t  ArrayT8.t  ArrayT9.t  JAppl.expectedOutcome  JAppl.t  JAppl1.expectedOutcome  JAppl1.t  JAppl10.expectedOutcome  JAppl10.t  JAppl2.expectedOutcome  JAppl2.t  JAppl3.expectedOutcome  JAppl3.t  JAppl4.expectedOutcome  JAppl4.t  JAppl5.expectedOutcome  JAppl5.t  JAppl6.expectedOutcome  JAppl6.t  JAppl7.expectedOutcome  JAppl7.t  JAppl8.expectedOutcome  JAppl8.t  JAppl9.expectedOutcome  JAppl9.t  JBackQuote1.expectedOutcome  JBackQuote1.t  JIncludeFile1.expectedOutcome  JIncludeFile1.t  JIncludeFile2.expectedOutcome  JIncludeFile2.t  JMatch.expectedOutcome  JMatch.t  JMatch1.expectedOutcome  (+225 more)
test/gom/: .cvsignore  BenchConsGom.t  Bool.gom  Builtin.gom  Builtin.t  Dotted.gom  Imported.gom  Importing.gom  JavaHook.gom  Leaf.gom  List.gom  ML.gom  Minimal.gom  MultiHook.gom  RuleBool.gom  RuleList.gom  TestAC.t  TestACU.t  TestAU.t  TestBool.t  TestBuiltin.t  TestCollection.t  TestDotted.t  TestFL.t  TestFrom.t  TestFromMethods.t  TestGomMultithread.t  TestGomWithoutMaximalSharing.t  TestImport.t  TestJavaHook.t  TestList.t  TestMakeEmpty.t  TestMultiHook.t  TestPeanoRule.t  TestRuleBool.t  TestRuleCond.t  TestRuleList.t  TestRuleSortList.t  TestSortHook.t  TestStratMapping.t  (+7 more)
test/numeric/: TestNumericConditions.t
test/regress/: BadBackquote.t  BadBackquote.t.nrt  BadOp.t  BadOp.t.nrt  Disjunction1.t  Disjunction2.t  Disjunction2.t.nrt  GomErrorTask.java  Include.t  Include.t.nrt  IncludeSl.t  IncludeSl.t.nrt  SuccessiveErrors.t  SuccessiveErrors.t.nrt  TestNonLinearity.t  TestNonLinearity.t.nrt  TomErrorTask.java  UndeclaredExplicityType.t  UndeclaredExplicityType.t.nrt  UnknownSymbol1.t  UnknownSymbol1.t.nrt  (+5 more)
utils/: .cvsignore  ApigenAntTask.java  Gom.xml  Makefile.am  Tom.src.xml  Tom.xml  TomAntTask.java  adt-to-java.bat  adt-to-java.sh  adt-to-tom.bat  adt-to-tom.sh  ant-tom  ant-tom.awk  debugLog.properties  debuglogging.properties  defaultlogging.properties  gom.bat  gomantlradaptor.bat  javaForTom.bat  javac-tom  javacForTom.bat  jtom-mode.el  jtom.bat  jtom.sh  jtom.sh.src  jtom.vim  normalLog.properties  pindent.py  pytom  script.bat.in  script.in  tlappend.bat  tom  tom.bat  tom.in  tom.src
www/: Makefile.am  index.html  releases.html
(+7615 files in other folders)
