# $Id: configure.in,v 1.65 2004/04/20 15:13:07 moreau Exp $

AC_INIT
AC_CONFIG_SRCDIR([configure.in])
AM_INIT_AUTOMAKE(jtom,2.0beta)
AC_PREREQ(2.57)

dnl Let aclocal use macros in ./config directory
ACLOCAL="${ACLOCAL} -I ./config"

AC_REVISION($Id: configure.in,v 1.65 2004/04/20 15:13:07 moreau Exp $)

AC_SUBST(JAVA_SUBDIRS)

dnl Checks for programs
AC_PROG_CC
dnl AC_PROG_RANLIB
dnl AC_PROG_INSTALL

AC_JAVA_OPTIONS
dnl JAVAC=javac
AC_CHECK_CLASSPATH
AC_PROG_JAVAC
AC_PROG_JAVA
dnl AC_CHECK_JUNIT

AC_SUBST(CLASSPATH)

AC_CHECK_PROG(JAVACC,javacc,javacc,true)

dnl Checks for library functions

dnl Require ATerm Java library
AC_PACKAGE_REQUIRE(aterm-java, aterm-java-config,
   [  --with-aterm-java=DIR   ATerm-javalibrary is in DIR])
dnl ATERM_JAVA is not allowed in Makefile.am's
JAVA_ATERM=\`${ATERM_JAVA}/bin/aterm-java-config\`
AC_SUBST(JAVA_ATERM)

dnl Require apigen
AC_PACKAGE_REQUIRE(apigen, adt-to-tom,
   [  --with-apigen=DIR   apigen is in DIR])

dnl APIGEN_JAVA is not allowed in Makefile.am's
JAVA_APIGEN=\`${APIGEN}/bin/apigen-config\`
AC_SUBST(JAVA_APIGEN)

ADTTOTOM=${APIGEN}/bin/adt-to-tom
AC_SUBST(ADTTOTOM)

AC_CONFIG_FILES([\
	Makefile \
	config/Makefile \
	utils/Makefile \
	share/Makefile \
	test/Makefile \
	src/Makefile \
	src/adt/Makefile \
	src/jtom/Makefile \
	src/jtom/checker/Makefile \
	src/jtom/tools/Makefile \
	src/jtom/xml/Makefile \
	src/jtom/compiler/Makefile \
	src/jtom/optimizer/Makefile \
	src/jtom/parser/Makefile \
	src/jtom/backend/Makefile \
	src/jtom/runtime/Makefile \
	src/jtom/runtime/mapping/Makefile \
	src/jtom/runtime/mapping/c/Makefile \
	src/jtom/runtime/mapping/caml/Makefile \
	src/jtom/runtime/strategies/Makefile \
	src/jtom/runtime/set/Makefile \
	src/jtom/runtime/xml/Makefile \
	src/jtom/exception/Makefile \
	src/jtom/debug/Makefile \
	src/jtom/verifier/Makefile \
	stable/Makefile \
	stable/adt/Makefile \
	stable/jtom/Makefile \
	stable/jtom/tools/Makefile \
	stable/jtom/xml/Makefile \
	stable/jtom/checker/Makefile \
	stable/jtom/compiler/Makefile \
	stable/jtom/optimizer/Makefile \
	stable/jtom/parser/Makefile \
	stable/jtom/backend/Makefile \
	stable/jtom/runtime/Makefile \
	stable/jtom/runtime/mapping/Makefile \
	stable/jtom/runtime/mapping/c/Makefile \
	stable/jtom/runtime/mapping/caml/Makefile \
	stable/jtom/runtime/strategies/Makefile \
	stable/jtom/runtime/set/Makefile \
	stable/jtom/runtime/xml/Makefile \
	stable/jtom/exception/Makefile \
	stable/jtom/debug/Makefile \
	stable/jtom/verifier/Makefile \
	tutorial/Makefile \
	tutorial/integer/Makefile \
	tutorial/integer/1_simple/Makefile \
	tutorial/integer/2_advanced/Makefile \
	tutorial/peano/Makefile \
	tutorial/peano/1_simple/Makefile \
	tutorial/peano/2_advanced/Makefile \
	tutorial/poly/Makefile \
	tutorial/poly/1_simple/Makefile \
	tutorial/poly/2_advanced/Makefile \
	tutorial/poly/3_apigen/Makefile \
	tutorial/list/Makefile \
	tutorial/list/1_simple/Makefile \
	tutorial/apigen/Makefile \
	tutorial/apigen/1_peano_c/Makefile \
	tutorial/apigen/2_peano_java/Makefile \
	examples/Makefile \
	examples/AddressBook/Makefile \
	examples/Builtin/Makefile \
	examples/GTree/Makefile \
	examples/Nspk/Makefile \
	examples/Xml/Makefile \
])
AC_OUTPUT
