#
#    TOM - To One Matching Compiler


JARFILE_TS      = TomSignature-$(VERSION).jar
JARFILE_TNODE   = TNode-$(VERSION).jar
JARFILE_SET     = set-$(VERSION).jar
data_DATA       = ${JARFILE_TS} ${JARFILE_TNODE} ${JARFILE_SET}

EXTRA_DIST 	= ${JARFILE_TS} ${JARFILE_TNODE} ${JARFILE_SET} TomSignature.tom TNode.tom set.tom

