#
#    TOM - To One Matching Compiler


JARFILE_TS      = TomSignature-$(VERSION).jar
JARFILE_TNODE   = TNode-$(VERSION).jar
JARFILE_SET     = Set-$(VERSION).jar
data_DATA       = ${JARFILE_TS} ${JARFILE_TNODE} ${JARFILE_SET}

adtdir          = $(datadir)/jtom
adt_DATA        = TomSignature.tom TNode.tom Set.tom

EXTRA_DIST 	= ${JARFILE_TS} ${JARFILE_TNODE} ${JARFILE_SET} TomSignature.tom TNode.tom Set.tom

